# TaskCross

lvl1/: Circle.h  README.MD  Rectangle.h
lvl2/: CMakeLists.txt  Circle.h  Color.h  Figure.h  README.MD  Rectangle.h  main.cpp
lvl3/: CMakeLists.txt  Circle.h  Color.h  Figure.h  README.MD  Rectangle.h  VectorDocument.h  main.cpp
